# ADS-Television-Detector

./: CMakeLists.txt  README.md  ballerina.txt  ballerina.yml  detection.cpp  detection.hpp  extraction.cpp  extraction.hpp  loadFile.hpp  load_file.cpp  lookSimilar.cpp  lookSimilar.hpp  main.cpp  pathFiles.cpp  pathFiles.hpp
